# rust-brain-teasers

./: Cargo.toml
amnesia/: Cargo.toml
amnesia/src/: main.rs
boxes/: Cargo.toml
boxes/src/: main.rs
byte_sized/: Cargo.toml
byte_sized/src/: main.rs
const_loop/: Cargo.toml
const_loop/src/: main.rs
double_or_nothing/: Cargo.toml
double_or_nothing/src/: main.rs
gordian_knot/: Cargo.toml
gordian_knot/src/: main.rs
hello_bonjour/: Cargo.toml
hello_bonjour/src/: main.rs
linked_list/src/: main.rs
morse_code/: Cargo.toml
mutable_immutable/: Cargo.toml
mutable_immutable/src/: main.rs
out_of_order/: Cargo.toml
out_of_order/src/: main.rs
quack/: Cargo.toml
reboot_universe/: Cargo.toml
reboot_universe/src/: main.rs
reverse_polarity/: Cargo.toml
reverse_polarity/src/: main.rs
sleepless/: Cargo.toml
sleepless/src/: main.rs
standard_input/: Cargo.toml
standard_input/src/: main.rs
string_length/src/: main.rs
structure_sizing/: Cargo.toml
structure_sizing/src/: main.rs
there_and_back/: Cargo.toml
there_and_back/src/: main.rs
three_and_a_bit/src/: main.rs
type_conversion/src/: main.rs
vec_size/: Cargo.toml
waiting_for_godot/: Cargo.toml
waiting_for_godot/src/: main.rs
x_marks_spot/: Cargo.toml
